Criação de cenas com layout em three.js

--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Layout Responsivo</title>
+  <title>Nova ILÊ</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@@ -102,7 +102,7 @@
 </head>
 <body>
   <header>
-    <h2 class="h2-header">NOVA ILÊ</h2>
+    <h2 class="h2-header">Nova ILÊ</h2>
   </header>
 
   <div class="container">
@@ -117,7 +117,10 @@
       </div>
       <div class="col-sm-12 col-md-6">
         <div class="rounded-container">
-          <!-- Conteúdo da coluna 2 -->
+          <div id="containerCena" > </div>
+
+          <button id="criaCena" class="btn btn-verde shadow-none mt-3">Criar modelo</button>
+
         </div>
       </div>
     </div>
@@ -132,8 +135,9 @@
     
     </div>
   
-
+  
   <script src="/public/editor.js"></script>
+  <script src="/public/bundle.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
