--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -117,7 +117,7 @@
       </div>
       <div class="col-sm-12 col-md-6">
         <div class="rounded-container">
-          <div id="containerCena" > </div>
+          <div id="containerCena"> </div>
 
           <button id="criaCena" class="btn btn-verde shadow-none mt-3">Criar modelo</button>
 
@@ -135,9 +135,58 @@
     
     </div>
   
-  
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.152.2/build/three.module.js",
+          "stats.js/src/Stats.js": "https://unpkg.com/stats-js@1.0.1/src/Stats.js"
+        }
+      }
+  </script>
+  <script  type="module" src="/public/openbim-components.js"></script>
+    <script type="module"> 
+       /* import * as THREE from "three";
+import * as OBC from "/public/openbim-components.js";
+
+// Get the <div> element where the scene will be displayed
+
+const container = document.getElementById('containerCena');
+
+// Initialize the basic components needed to use this library
+
+const components = new OBC.Components();
+
+components.scene = new OBC.SimpleScene(components);
+components._renderer = new OBC.SimpleRenderer(components, container);
+components.camera = new OBC.SimpleCamera(components);
+components.raycaster = new OBC.SimpleRaycaster(components);
+
+components.init();
+
+// Add some elements to the scene
+
+const scene = components.scene.get();
+
+const geometry = new THREE.BoxGeometry(3, 3, 3);
+const material = new THREE.MeshStandardMaterial({ color: "red" });
+const cube = new THREE.Mesh(geometry, material);
+cube.position.set(0, 1.5, 0);
+scene.add(cube);
+
+components.meshes.push(cube);
+
+const directionalLight = new THREE.DirectionalLight();
+directionalLight.position.set(5, 10, 3);
+directionalLight.intensity = 0.5;
+scene.add(directionalLight);
+
+const ambientLight = new THREE.AmbientLight();
+ambientLight.intensity = 0.5;
+scene.add(ambientLight);*/
+    </script>
+
   <script src="/public/editor.js"></script>
-  <script src="/public/bundle.js"></script>
+  <script type="module" src="/public/bundle.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
