Operando sobre blocos simples

--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nova ILÊ</title>
+  <title>ILÊ MI</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@@ -102,7 +102,7 @@
 </head>
 <body>
   <header>
-    <h2 class="h2-header">Nova ILÊ</h2>
+    <h2 class="h2-header">ILÊ MI</h2>
   </header>
 
   <div class="container">
