--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -117,7 +117,7 @@
       </div>
       <div class="col-sm-12 col-md-6">
         <div class="rounded-container">
-          <div id="containerCena"> </div>
+          <div id="containerCena" style="height: 400px;"> </div>
 
           <button id="criaCena" class="btn btn-verde shadow-none mt-3">Criar modelo</button>
 
