Highlight nos objetos em cena

--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -111,7 +111,7 @@
         <div class="rounded-container">
           
             <div id="table-container"></div>
-            <button id="generate-table" class="btn btn-verde shadow-none mt-3">Gerar Tabela</button>
+            <button id="generate-table" class="btn btn-verde shadow-none mt-3">Limpar Tabela</button>
             
         </div>
       </div>
