Versão do artigo

--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -11,37 +11,33 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">  <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background-color: #D4E7C5;
+      background-color: #FF4E08;
     }
     header {
-      background-color: white;
+      background-color: #F7F3E3;
       width: 100%;
       padding: 1.2rem 3rem;
       margin-bottom: 2rem;
     }
-    .h2-header {
-        font-family: 'Righteous', sans-serif;
-      margin-left: 15px; /* Ajuste conforme necessário */
-      color: #99BC85;
-    }
+    
     .rounded-container {
-      background-color: white;
+      background-color: #F7F3E3;
       border-radius: 10px;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       padding: 20px;
       margin-bottom: 20px;
     }
     footer {
-      color: #99BC85;
+      color: #3E3B2C;
       text-align: center;
       position: fixed;
       bottom: 0;
       width: 100%;
-      background-color: white;
+      background-color: #F7F3E3;
       padding: 10px 0;
     }
     a, a:hover, a:active, a:visited{
-        color: #99BC85;  
+        color: #FF4E08;  
     }
 
     .table-container {
@@ -51,14 +47,14 @@
 }
 
 .table-container td {
-  border: 1px solid #ddd;
+  border: 1px solid #3E3B2C;
   text-align: center;
   padding: 5px;
   height: 3vw; 
 }
 
     .table-container {
-    background-color: white;
+    background-color: #EAE0CC;
     }
 
     .btn-light {
@@ -70,13 +66,13 @@
 
 
     .btn-verde, .btn-verde:hover, .btn-verde:visited{
-    color: white;
-    background-color: #99BC85;
-    border-color: #5f7a4f;
+    color: #EAE0CC;
+    background-color: #3e3b2c;
+    border-color: #3E3B2C;
     }
 
     .btn-verde:active { 
-        background-color: #5f7a4f;
+        background-color: #FF4E08;
     }
 
     #popup-container button {
@@ -90,8 +86,6 @@
     border-radius: 5px;
     }
 
-
-
     @media (max-width: 768px) {
   .table-container td {
     height: 3vw; 
@@ -102,8 +96,8 @@
 </head>
 <body>
   <header>
-    <h2 class="h2-header">ILÊMI</h2>
-  </header>
+    <img src="/public/logoilemi-preto.png" alt="Logotipo ILÊMI" height="60">
+</header>
 
   <div class="container">
     <div class="row" id="principal">
@@ -120,7 +114,7 @@
           <div id="containerCena" style="height: 400px;"> </div>
 
           <button id="criaCena" class="btn btn-verde shadow-none mt-3">Criar modelo</button>
-
+          <button id="exportaModelo" class="btn btn-verde shadow-none mt-3">Exportar modelo</button>
         </div>
       </div>
     </div>
