--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">  <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background-color: #FF4E08;
+      background-color: #EAE0CC;
     }
     header {
       background-color: #F7F3E3;
